--- a/src/global.css
+++ b/src/global.css
@@ -76,3 +76,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  width: 80%;
+}
