--- a/src/components/Calc/Calc.module.css
+++ b/src/components/Calc/Calc.module.css
@@ -23,7 +23,7 @@
     font-size: 0.8em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    /* background-color: #1a1a1a; */
     cursor: pointer;
     transition: border-color 0.25s;
 
